--- a/your_app_buscacep/pubspec.yaml
+++ b/your_app_buscacep/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   provider: ^6.0.3
   mockito: ^5.0.16
   build_runner: ^2.1.10
+  shared_preferences: ^2.0.9
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
